# mph-thesis

./: README.md  exploratory_analyses.ipynb  pyproject.toml
data/cdc/: COVID-19_Vaccinations_in_the_United_States_County.csv  COVID-19_Vaccinations_in_the_United_States_Jurisdiction.csv  Influenza_Vaccination_Coverage_for_All_Ages__6__Months_.csv  state_population.csv
data/census/: ZIP_COUNTY_122021.csv  total_population.csv
data/international/: owid-covid-data.csv
data/jhu/: people_vaccinated_us_timeline.csv  vaccine_data_us_timeline.csv
data/kff/: school_policy.csv  social_distance.csv  vaccine_mandates.csv
data/owid/: owid-covid-data.csv
data/politics/: 1976-2020-president.csv
data/state_level/: COVID-19_Vaccinations_in_the_United_States_Jurisdiction.csv  Vaccines.gov__Flu_vaccinating_provider_locations.csv  state_demographics.csv  state_demographics.xlsx
data/state_level/raw/: state_demo_1.xlsx  state_demo_2.xlsx  state_demo_3.xlsx  state_demographics_raw.xlsx  state_fc.csv
src/notebooks/: county_level.ipynb  covar_table.csv  domestic_analysis.ipynb  domestic_exploration.ipynb  flu_booster.ipynb  international_exploration.ipynb  state_level.ipynb
src/notebooks/domestic/: domestic_exploration.ipynb
src/notebooks/international/: international_exploration.ipynb
