[tool.poetry]
name = "mph-thesis"
version = "0.1.0"
description = ""
authors = ["Youri Benadjaoud <youribenadjaoud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
black = "^22.1.0"
isort = "^5.10.1"
jupyterlab = "^3.3.1"
scipy = { version = "^1.8.0", python = ">=3.9,<3.11"}
notebook = "^6.4.10"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"